# ccrypt

./: CMakeLists.txt  Makefile
.github/workflows/: build-script.yml
cmake/: FindGMP.cmake
src/: CMakeLists.txt  rng.c  rng.h
